Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Parser.y
-----------------------------------------------------------------------------


terminal "case" is unused
terminal "otherwise" is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_ooh -> Program                              (0)
	Program -> Classes Functions Variables "main" Block   (1)
	Classes ->                                         (2)
	Classes -> Class Classes                           (3)
	Functions ->                                       (4)
	Functions -> Function Functions                    (5)
	Variables ->                                       (6)
	Variables -> Variable Variables                    (7)
	Function -> var_identifier "=>" TypeFuncReturn "::" TypeFuncParams var_identifier Params Block   (8)
	Function -> var_identifier "=>" TypeFuncReturn Block   (9)
	Params ->                                          (10)
	Params -> "->" TypeFuncParams var_identifier Params   (11)
	TypeFuncReturn -> Primitive                        (12)
	TypeFuncReturn -> class_identifier                 (13)
	TypeFuncReturn -> "Nothing"                        (14)
	TypeFuncParams -> Primitive ArrayIndexesDeclaration   (15)
	TypeFuncParams -> class_identifier ArrayIndexesDeclaration   (16)
	Primitive -> "Int"                                 (17)
	Primitive -> "Double"                              (18)
	Primitive -> "Money"                               (19)
	Primitive -> "String"                              (20)
	Primitive -> "Bool"                                (21)
	Primitive -> "Integer"                             (22)
	Type -> Primitive ArrayIndexesDeclaration          (23)
	Type -> class_identifier ArrayIndexesDeclaration   (24)
	ArrayIndexesDeclaration ->                         (25)
	ArrayIndexesDeclaration -> "[" integer_literal "]" ArrayIndexesDeclaration   (26)
	ArrayIndexesExpression -> "[" Expression "]"       (27)
	ArrayIndexesExpression -> "[" Expression "]" "[" Expression "]"   (28)
	ListType -> "List" "of" class_identifier           (29)
	ListType -> "List" "of" Primitive                  (30)
	Variable -> Type var_identifier VarIdentifiers ";"   (31)
	Variable -> Type var_identifier "=" LiteralOrVariable ";"   (32)
	Variable -> Type var_identifier "=" ArrayAssignment1D ";"   (33)
	Variable -> Type var_identifier "=" ArrayAssignment2D ";"   (34)
	Variable -> Type var_identifier "=" ObjectCreation ";"   (35)
	Variable -> ListType var_identifier "=" ListAssignment ";"   (36)
	Variable -> ListType var_identifier VarIdentifiers ";"   (37)
	ObjectCreation -> class_identifier "(" Expression CallParams ")"   (38)
	ObjectCreation -> class_identifier "(" ")"         (39)
	VarIdentifiers ->                                  (40)
	VarIdentifiers -> "," var_identifier VarIdentifiers   (41)
	ArrayAssignment1D -> "[" LiteralOrVariable Array1DAssignments "]"   (42)
	ArrayAssignment1D -> "[" "]"                       (43)
	Array1DAssignments ->                              (44)
	Array1DAssignments -> "," LiteralOrVariable Array1DAssignments   (45)
	ArrayAssignment2D -> "[" ArrayAssignment1D Array2DAssignments "]"   (46)
	Array2DAssignments ->                              (47)
	Array2DAssignments -> "," ArrayAssignment1D Array2DAssignments   (48)
	ListAssignment -> ArrayAssignment1D                (49)
	ListAssignment -> "[" integer_literal ".." integer_literal "]"   (50)
	Class -> "class" class_identifier ":" class_identifier ClassBlock   (51)
	Class -> "class" class_identifier ClassBlock       (52)
	ClassBlock -> "{" ClassMembers ClassConstructor ClassMembers "}"   (53)
	ClassBlock -> "{" ClassMembers "}"                 (54)
	ClassMembers ->                                    (55)
	ClassMembers -> ClassAttribute ClassMembers        (56)
	ClassMembers -> ClassFunction ClassMembers         (57)
	ClassAttribute -> "[+]" Variable                   (58)
	ClassAttribute -> "[-]" Variable                   (59)
	ClassFunction -> "[+]" Function                    (60)
	ClassFunction -> "[-]" Function                    (61)
	ClassConstructor -> "::" TypeFuncParams var_identifier Params Block   (62)
	ClassConstructor -> "::" Block                     (63)
	LiteralOrVariable -> var_identifier                (64)
	LiteralOrVariable -> integer_literal               (65)
	LiteralOrVariable -> decimal_literal               (66)
	LiteralOrVariable -> string_literal                (67)
	Block -> "{" BlockStatement "}"                    (68)
	BlockStatement ->                                  (69)
	BlockStatement -> Statement BlockStatement         (70)
	Statement -> Assignment ";"                        (71)
	Statement -> Display ";"                           (72)
	Statement -> Reading ";"                           (73)
	Statement -> DoublePlusMinus ";"                   (74)
	Statement -> FunctionCall ";"                      (75)
	Statement -> Return ";"                            (76)
	Statement -> Variable                              (77)
	Statement -> Condition                             (78)
	Statement -> Cycle                                 (79)
	Assignment -> var_identifier "=" Expression        (80)
	Assignment -> var_identifier "=" FunctionCall      (81)
	Assignment -> var_identifier "=" ObjectMember      (82)
	Assignment -> ObjectMember "=" Expression          (83)
	Assignment -> ObjectMember "=" FunctionCall        (84)
	Assignment -> ObjectMember "=" ObjectMember        (85)
	Assignment -> var_identifier ArrayIndexesExpression "=" Expression   (86)
	Assignment -> var_identifier ArrayIndexesExpression "=" FunctionCall   (87)
	Assignment -> var_identifier ArrayIndexesExpression "=" ObjectMember   (88)
	Assignment -> ObjectMember ArrayIndexesExpression "=" Expression   (89)
	Assignment -> ObjectMember ArrayIndexesExpression "=" FunctionCall   (90)
	Assignment -> ObjectMember ArrayIndexesExpression "=" ObjectMember   (91)
	Reading -> "read" "(" var_identifier ")"           (92)
	Display -> "display" "(" integer_literal ")"       (93)
	Display -> "display" "(" decimal_literal ")"       (94)
	Display -> "display" "(" string_literal ")"        (95)
	Display -> "display" "(" var_identifier ")"        (96)
	Display -> "display" "(" ObjectMember ")"          (97)
	Display -> "display" "(" FunctionCall ")"          (98)
	Display -> "display" "(" var_identifier ArrayIndexesExpression ")"   (99)
	Display -> "display" "(" ObjectMember ArrayIndexesExpression ")"   (100)
	Expression -> Expression ">" Expression            (101)
	Expression -> Expression "<" Expression            (102)
	Expression -> Expression ">=" Expression           (103)
	Expression -> Expression "<=" Expression           (104)
	Expression -> Expression "==" Expression           (105)
	Expression -> Expression "!=" Expression           (106)
	Expression -> Expression "&&" Expression           (107)
	Expression -> Expression "||" Expression           (108)
	Expression -> Expression "+" Expression            (109)
	Expression -> Expression "-" Expression            (110)
	Expression -> Expression "/" Expression            (111)
	Expression -> Expression "*" Expression            (112)
	Expression -> Expression "^" Expression            (113)
	Expression -> Expression "%" Expression            (114)
	Expression -> LiteralOrVariable                    (115)
	Expression -> var_identifier ArrayIndexesExpression   (116)
	Expression -> "!" Expression                       (117)
	Expression -> "True"                               (118)
	Expression -> "False"                              (119)
	Expression -> "(" Expression ")"                   (120)
	Condition -> If                                    (121)
	If -> "if" "(" Expression ")" Block "else" Block   (122)
	Cycle -> While                                     (123)
	Cycle -> For                                       (124)
	While -> "while" "(" Expression ")" Block          (125)
	For -> "for" "(" integer_literal ".." integer_literal ")" Block   (126)
	DoublePlusMinus -> var_identifier "++"             (127)
	DoublePlusMinus -> var_identifier "--"             (128)
	FunctionCall -> ObjectMember "(" Expression CallParams ")"   (129)
	FunctionCall -> var_identifier "(" Expression CallParams ")"   (130)
	FunctionCall -> ObjectMember "(" ")"               (131)
	FunctionCall -> var_identifier "(" ")"             (132)
	CallParams ->                                      (133)
	CallParams -> "," Expression CallParams            (134)
	ObjectMember -> var_identifier "." var_identifier   (135)
	Return -> "return" FunctionCall                    (136)
	Return -> "return" Expression                      (137)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"="            { TEquals _ }
	","            { TComma _ }
	"if"           { TIf _ }
	"else"         { TElse _ }
	"case"         { TCase _ }
	"of"           { TOf _ }
	"otherwise"    { TOtherwise _ }
	"for"          { TFor _ }
	"while"        { TWhile _ }
	"read"         { TRead _ }
	"display"      { TDisplay _ }
	"+"            { TPlus _ }
	"-"            { TMinus _ }
	"*"            { TMultiply _ }
	"/"            { TDivide _ }
	"++"           { TPlusPlus _ }
	"--"           { TMinusMinus _ }
	"^"            { TPower _ }
	"!"            { TNot _ }
	"True"         { TTrue _ }
	"False"        { TTrue _ }
	">"            { TGreaterThan _ }
	"<"            { TLessThan _ }
	">="           { TGreaterEqualThan _ }
	"<="           { TLessEqualThan _ }
	"=="           { TDoubleEqual _ }
	"!="           { TNotEqual _ }
	"&&"           { TAnd _ }
	"||"           { TOr _ }
	"main"         { TMain _ }
	"class"        { TClass _ }
	":"            { TColon _ }
	"[+]"          { TPublic _ }
	"[-]"          { TPrivate _ }
	"=>"           { TEqualsRightArrow _ }
	"->"           { TDashRightArrow _ }
	"::"           { TDoubleColon _ }
	"["            { TLeftBracket _ }
	"]"            { TRightBracket _ }
	"List"         { TList _ }
	".."           { TDoublePoint _ }
	";"            { TSemiColon _ }
	"{"            { TLeftBrace _ }
	"}"            { TRightBrace _ }
	"("            { TLeftParen _ }
	")"            { TRightParen _ }
	"Int"          { TInt _ }
	"Integer"      { TInteger _ }
	"Double"       { TDouble _ }
	"Money"        { TMoney _ }
	"String"       { TString _ }
	"Bool"         { TBool _ }
	"Nothing"      { TString _ }
	"return"       { TReturn _ }
	"."            { TPoint _ }
	"%"            { TMod _ }
	decimal_literal{ TDecimalLiteral _ $$ }
	integer_literal{ TIntegerLiteral _ $$ }
	var_identifier { TVarIdent _ $$ }
	class_identifier{ TClassIdent _ $$ }
	string_literal { TStringLiteral _ $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_ooh      rule  0
	Program         rule  1
	Classes         rules 2, 3
	Functions       rules 4, 5
	Variables       rules 6, 7
	Function        rules 8, 9
	Params          rules 10, 11
	TypeFuncReturn  rules 12, 13, 14
	TypeFuncParams  rules 15, 16
	Primitive       rules 17, 18, 19, 20, 21, 22
	Type            rules 23, 24
	ArrayIndexesDeclaration rules 25, 26
	ArrayIndexesExpression rules 27, 28
	ListType        rules 29, 30
	Variable        rules 31, 32, 33, 34, 35, 36, 37
	ObjectCreation  rules 38, 39
	VarIdentifiers  rules 40, 41
	ArrayAssignment1D rules 42, 43
	Array1DAssignments rules 44, 45
	ArrayAssignment2D rule  46
	Array2DAssignments rules 47, 48
	ListAssignment  rules 49, 50
	Class           rules 51, 52
	ClassBlock      rules 53, 54
	ClassMembers    rules 55, 56, 57
	ClassAttribute  rules 58, 59
	ClassFunction   rules 60, 61
	ClassConstructor rules 62, 63
	LiteralOrVariable rules 64, 65, 66, 67
	Block           rule  68
	BlockStatement  rules 69, 70
	Statement       rules 71, 72, 73, 74, 75, 76, 77, 78, 79
	Assignment      rules 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91
	Reading         rule  92
	Display         rules 93, 94, 95, 96, 97, 98, 99, 100
	Expression      rules 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120
	Condition       rule  121
	If              rule  122
	Cycle           rules 123, 124
	While           rule  125
	For             rule  126
	DoublePlusMinus rules 127, 128
	FunctionCall    rules 129, 130, 131, 132
	CallParams      rules 133, 134
	ObjectMember    rule  135
	Return          rules 136, 137

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"main"         reduce using rule 2
	"class"        shift, and enter state 4
	"List"         reduce using rule 2
	"Int"          reduce using rule 2
	"Integer"      reduce using rule 2
	"Double"       reduce using rule 2
	"Money"        reduce using rule 2
	"String"       reduce using rule 2
	"Bool"         reduce using rule 2
	var_identifier reduce using rule 2
	class_identifierreduce using rule 2

	Program        goto state 5
	Classes        goto state 2
	Class          goto state 3

State 1


	"class"        shift, and enter state 4

	Classes        goto state 2
	Class          goto state 3

State 2

	Program -> Classes . Functions Variables "main" Block    (rule 1)

	"main"         reduce using rule 4
	"List"         reduce using rule 4
	"Int"          reduce using rule 4
	"Integer"      reduce using rule 4
	"Double"       reduce using rule 4
	"Money"        reduce using rule 4
	"String"       reduce using rule 4
	"Bool"         reduce using rule 4
	var_identifier shift, and enter state 10
	class_identifierreduce using rule 4

	Functions      goto state 8
	Function       goto state 9

State 3

	Classes -> Class . Classes                          (rule 3)

	"main"         reduce using rule 2
	"class"        shift, and enter state 4
	"List"         reduce using rule 2
	"Int"          reduce using rule 2
	"Integer"      reduce using rule 2
	"Double"       reduce using rule 2
	"Money"        reduce using rule 2
	"String"       reduce using rule 2
	"Bool"         reduce using rule 2
	var_identifier reduce using rule 2
	class_identifierreduce using rule 2

	Classes        goto state 7
	Class          goto state 3

State 4

	Class -> "class" . class_identifier ":" class_identifier ClassBlock    (rule 51)
	Class -> "class" . class_identifier ClassBlock      (rule 52)

	class_identifiershift, and enter state 6


State 5

	%start_ooh -> Program .                             (rule 0)

	%eof           accept


State 6

	Class -> "class" class_identifier . ":" class_identifier ClassBlock    (rule 51)
	Class -> "class" class_identifier . ClassBlock      (rule 52)

	":"            shift, and enter state 27
	"{"            shift, and enter state 28

	ClassBlock     goto state 26

State 7

	Classes -> Class Classes .                          (rule 3)

	"main"         reduce using rule 3
	"List"         reduce using rule 3
	"Int"          reduce using rule 3
	"Integer"      reduce using rule 3
	"Double"       reduce using rule 3
	"Money"        reduce using rule 3
	"String"       reduce using rule 3
	"Bool"         reduce using rule 3
	var_identifier reduce using rule 3
	class_identifierreduce using rule 3


State 8

	Program -> Classes Functions . Variables "main" Block    (rule 1)

	"main"         reduce using rule 6
	"List"         shift, and enter state 18
	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	class_identifiershift, and enter state 25

	Variables      goto state 13
	Primitive      goto state 14
	Type           goto state 15
	ListType       goto state 16
	Variable       goto state 17

State 9

	Functions -> Function . Functions                   (rule 5)

	"main"         reduce using rule 4
	"List"         reduce using rule 4
	"Int"          reduce using rule 4
	"Integer"      reduce using rule 4
	"Double"       reduce using rule 4
	"Money"        reduce using rule 4
	"String"       reduce using rule 4
	"Bool"         reduce using rule 4
	var_identifier shift, and enter state 10
	class_identifierreduce using rule 4

	Functions      goto state 12
	Function       goto state 9

State 10

	Function -> var_identifier . "=>" TypeFuncReturn "::" TypeFuncParams var_identifier Params Block    (rule 8)
	Function -> var_identifier . "=>" TypeFuncReturn Block    (rule 9)

	"=>"           shift, and enter state 11


State 11

	Function -> var_identifier "=>" . TypeFuncReturn "::" TypeFuncParams var_identifier Params Block    (rule 8)
	Function -> var_identifier "=>" . TypeFuncReturn Block    (rule 9)

	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	"Nothing"      shift, and enter state 45
	class_identifiershift, and enter state 46

	TypeFuncReturn goto state 43
	Primitive      goto state 44

State 12

	Functions -> Function Functions .                   (rule 5)

	"main"         reduce using rule 5
	"List"         reduce using rule 5
	"Int"          reduce using rule 5
	"Integer"      reduce using rule 5
	"Double"       reduce using rule 5
	"Money"        reduce using rule 5
	"String"       reduce using rule 5
	"Bool"         reduce using rule 5
	class_identifierreduce using rule 5


State 13

	Program -> Classes Functions Variables . "main" Block    (rule 1)

	"main"         shift, and enter state 42


State 14

	Type -> Primitive . ArrayIndexesDeclaration         (rule 23)

	"["            shift, and enter state 36
	var_identifier reduce using rule 25

	ArrayIndexesDeclarationgoto state 41

State 15

	Variable -> Type . var_identifier VarIdentifiers ";"    (rule 31)
	Variable -> Type . var_identifier "=" LiteralOrVariable ";"    (rule 32)
	Variable -> Type . var_identifier "=" ArrayAssignment1D ";"    (rule 33)
	Variable -> Type . var_identifier "=" ArrayAssignment2D ";"    (rule 34)
	Variable -> Type . var_identifier "=" ObjectCreation ";"    (rule 35)

	var_identifier shift, and enter state 40


State 16

	Variable -> ListType . var_identifier "=" ListAssignment ";"    (rule 36)
	Variable -> ListType . var_identifier VarIdentifiers ";"    (rule 37)

	var_identifier shift, and enter state 39


State 17

	Variables -> Variable . Variables                   (rule 7)

	"main"         reduce using rule 6
	"List"         shift, and enter state 18
	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	class_identifiershift, and enter state 25

	Variables      goto state 38
	Primitive      goto state 14
	Type           goto state 15
	ListType       goto state 16
	Variable       goto state 17

State 18

	ListType -> "List" . "of" class_identifier          (rule 29)
	ListType -> "List" . "of" Primitive                 (rule 30)

	"of"           shift, and enter state 37


State 19

	Primitive -> "Int" .                                (rule 17)

	"::"           reduce using rule 17
	"["            reduce using rule 17
	"{"            reduce using rule 17
	var_identifier reduce using rule 17


State 20

	Primitive -> "Integer" .                            (rule 22)

	"::"           reduce using rule 22
	"["            reduce using rule 22
	"{"            reduce using rule 22
	var_identifier reduce using rule 22


State 21

	Primitive -> "Double" .                             (rule 18)

	"::"           reduce using rule 18
	"["            reduce using rule 18
	"{"            reduce using rule 18
	var_identifier reduce using rule 18


State 22

	Primitive -> "Money" .                              (rule 19)

	"::"           reduce using rule 19
	"["            reduce using rule 19
	"{"            reduce using rule 19
	var_identifier reduce using rule 19


State 23

	Primitive -> "String" .                             (rule 20)

	"::"           reduce using rule 20
	"["            reduce using rule 20
	"{"            reduce using rule 20
	var_identifier reduce using rule 20


State 24

	Primitive -> "Bool" .                               (rule 21)

	"::"           reduce using rule 21
	"["            reduce using rule 21
	"{"            reduce using rule 21
	var_identifier reduce using rule 21


State 25

	Type -> class_identifier . ArrayIndexesDeclaration    (rule 24)

	"["            shift, and enter state 36
	var_identifier reduce using rule 25

	ArrayIndexesDeclarationgoto state 35

State 26

	Class -> "class" class_identifier ClassBlock .      (rule 52)

	"main"         reduce using rule 52
	"class"        reduce using rule 52
	"List"         reduce using rule 52
	"Int"          reduce using rule 52
	"Integer"      reduce using rule 52
	"Double"       reduce using rule 52
	"Money"        reduce using rule 52
	"String"       reduce using rule 52
	"Bool"         reduce using rule 52
	var_identifier reduce using rule 52
	class_identifierreduce using rule 52


State 27

	Class -> "class" class_identifier ":" . class_identifier ClassBlock    (rule 51)

	class_identifiershift, and enter state 34


State 28

	ClassBlock -> "{" . ClassMembers ClassConstructor ClassMembers "}"    (rule 53)
	ClassBlock -> "{" . ClassMembers "}"                (rule 54)

	"[+]"          shift, and enter state 32
	"[-]"          shift, and enter state 33
	"::"           reduce using rule 55
	"}"            reduce using rule 55

	ClassMembers   goto state 29
	ClassAttribute goto state 30
	ClassFunction  goto state 31

State 29

	ClassBlock -> "{" ClassMembers . ClassConstructor ClassMembers "}"    (rule 53)
	ClassBlock -> "{" ClassMembers . "}"                (rule 54)

	"::"           shift, and enter state 67
	"}"            shift, and enter state 68

	ClassConstructorgoto state 66

State 30

	ClassMembers -> ClassAttribute . ClassMembers       (rule 56)

	"[+]"          shift, and enter state 32
	"[-]"          shift, and enter state 33
	"::"           reduce using rule 55
	"}"            reduce using rule 55

	ClassMembers   goto state 65
	ClassAttribute goto state 30
	ClassFunction  goto state 31

State 31

	ClassMembers -> ClassFunction . ClassMembers        (rule 57)

	"[+]"          shift, and enter state 32
	"[-]"          shift, and enter state 33
	"::"           reduce using rule 55
	"}"            reduce using rule 55

	ClassMembers   goto state 64
	ClassAttribute goto state 30
	ClassFunction  goto state 31

State 32

	ClassAttribute -> "[+]" . Variable                  (rule 58)
	ClassFunction -> "[+]" . Function                   (rule 60)

	"List"         shift, and enter state 18
	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	var_identifier shift, and enter state 10
	class_identifiershift, and enter state 25

	Function       goto state 62
	Primitive      goto state 14
	Type           goto state 15
	ListType       goto state 16
	Variable       goto state 63

State 33

	ClassAttribute -> "[-]" . Variable                  (rule 59)
	ClassFunction -> "[-]" . Function                   (rule 61)

	"List"         shift, and enter state 18
	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	var_identifier shift, and enter state 10
	class_identifiershift, and enter state 25

	Function       goto state 60
	Primitive      goto state 14
	Type           goto state 15
	ListType       goto state 16
	Variable       goto state 61

State 34

	Class -> "class" class_identifier ":" class_identifier . ClassBlock    (rule 51)

	"{"            shift, and enter state 28

	ClassBlock     goto state 59

State 35

	Type -> class_identifier ArrayIndexesDeclaration .    (rule 24)

	var_identifier reduce using rule 24


State 36

	ArrayIndexesDeclaration -> "[" . integer_literal "]" ArrayIndexesDeclaration    (rule 26)

	integer_literalshift, and enter state 58


State 37

	ListType -> "List" "of" . class_identifier          (rule 29)
	ListType -> "List" "of" . Primitive                 (rule 30)

	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	class_identifiershift, and enter state 57

	Primitive      goto state 56

State 38

	Variables -> Variable Variables .                   (rule 7)

	"main"         reduce using rule 7


State 39

	Variable -> ListType var_identifier . "=" ListAssignment ";"    (rule 36)
	Variable -> ListType var_identifier . VarIdentifiers ";"    (rule 37)

	"="            shift, and enter state 55
	","            shift, and enter state 53
	";"            reduce using rule 40

	VarIdentifiers goto state 54

State 40

	Variable -> Type var_identifier . VarIdentifiers ";"    (rule 31)
	Variable -> Type var_identifier . "=" LiteralOrVariable ";"    (rule 32)
	Variable -> Type var_identifier . "=" ArrayAssignment1D ";"    (rule 33)
	Variable -> Type var_identifier . "=" ArrayAssignment2D ";"    (rule 34)
	Variable -> Type var_identifier . "=" ObjectCreation ";"    (rule 35)

	"="            shift, and enter state 52
	","            shift, and enter state 53
	";"            reduce using rule 40

	VarIdentifiers goto state 51

State 41

	Type -> Primitive ArrayIndexesDeclaration .         (rule 23)

	var_identifier reduce using rule 23


State 42

	Program -> Classes Functions Variables "main" . Block    (rule 1)

	"{"            shift, and enter state 49

	Block          goto state 50

State 43

	Function -> var_identifier "=>" TypeFuncReturn . "::" TypeFuncParams var_identifier Params Block    (rule 8)
	Function -> var_identifier "=>" TypeFuncReturn . Block    (rule 9)

	"::"           shift, and enter state 48
	"{"            shift, and enter state 49

	Block          goto state 47

State 44

	TypeFuncReturn -> Primitive .                       (rule 12)

	"::"           reduce using rule 12
	"{"            reduce using rule 12


State 45

	TypeFuncReturn -> "Nothing" .                       (rule 14)

	"::"           reduce using rule 14
	"{"            reduce using rule 14


State 46

	TypeFuncReturn -> class_identifier .                (rule 13)

	"::"           reduce using rule 13
	"{"            reduce using rule 13


State 47

	Function -> var_identifier "=>" TypeFuncReturn Block .    (rule 9)

	"main"         reduce using rule 9
	"[+]"          reduce using rule 9
	"[-]"          reduce using rule 9
	"::"           reduce using rule 9
	"List"         reduce using rule 9
	"}"            reduce using rule 9
	"Int"          reduce using rule 9
	"Integer"      reduce using rule 9
	"Double"       reduce using rule 9
	"Money"        reduce using rule 9
	"String"       reduce using rule 9
	"Bool"         reduce using rule 9
	var_identifier reduce using rule 9
	class_identifierreduce using rule 9


State 48

	Function -> var_identifier "=>" TypeFuncReturn "::" . TypeFuncParams var_identifier Params Block    (rule 8)

	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	class_identifiershift, and enter state 72

	TypeFuncParams goto state 113
	Primitive      goto state 70

State 49

	Block -> "{" . BlockStatement "}"                   (rule 68)

	"if"           shift, and enter state 106
	"for"          shift, and enter state 107
	"while"        shift, and enter state 108
	"read"         shift, and enter state 109
	"display"      shift, and enter state 110
	"List"         shift, and enter state 18
	"}"            reduce using rule 69
	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	"return"       shift, and enter state 111
	var_identifier shift, and enter state 112
	class_identifiershift, and enter state 25

	Primitive      goto state 14
	Type           goto state 15
	ListType       goto state 16
	Variable       goto state 91
	BlockStatement goto state 92
	Statement      goto state 93
	Assignment     goto state 94
	Reading        goto state 95
	Display        goto state 96
	Condition      goto state 97
	If             goto state 98
	Cycle          goto state 99
	While          goto state 100
	For            goto state 101
	DoublePlusMinusgoto state 102
	FunctionCall   goto state 103
	ObjectMember   goto state 104
	Return         goto state 105

State 50

	Program -> Classes Functions Variables "main" Block .    (rule 1)

	%eof           reduce using rule 1


State 51

	Variable -> Type var_identifier VarIdentifiers . ";"    (rule 31)

	";"            shift, and enter state 90


State 52

	Variable -> Type var_identifier "=" . LiteralOrVariable ";"    (rule 32)
	Variable -> Type var_identifier "=" . ArrayAssignment1D ";"    (rule 33)
	Variable -> Type var_identifier "=" . ArrayAssignment2D ";"    (rule 34)
	Variable -> Type var_identifier "=" . ObjectCreation ";"    (rule 35)

	"["            shift, and enter state 84
	decimal_literalshift, and enter state 85
	integer_literalshift, and enter state 86
	var_identifier shift, and enter state 87
	class_identifiershift, and enter state 88
	string_literal shift, and enter state 89

	ObjectCreation goto state 80
	ArrayAssignment1Dgoto state 81
	ArrayAssignment2Dgoto state 82
	LiteralOrVariablegoto state 83

State 53

	VarIdentifiers -> "," . var_identifier VarIdentifiers    (rule 41)

	var_identifier shift, and enter state 79


State 54

	Variable -> ListType var_identifier VarIdentifiers . ";"    (rule 37)

	";"            shift, and enter state 78


State 55

	Variable -> ListType var_identifier "=" . ListAssignment ";"    (rule 36)

	"["            shift, and enter state 77

	ArrayAssignment1Dgoto state 75
	ListAssignment goto state 76

State 56

	ListType -> "List" "of" Primitive .                 (rule 30)

	var_identifier reduce using rule 30


State 57

	ListType -> "List" "of" class_identifier .          (rule 29)

	var_identifier reduce using rule 29


State 58

	ArrayIndexesDeclaration -> "[" integer_literal . "]" ArrayIndexesDeclaration    (rule 26)

	"]"            shift, and enter state 74


State 59

	Class -> "class" class_identifier ":" class_identifier ClassBlock .    (rule 51)

	"main"         reduce using rule 51
	"class"        reduce using rule 51
	"List"         reduce using rule 51
	"Int"          reduce using rule 51
	"Integer"      reduce using rule 51
	"Double"       reduce using rule 51
	"Money"        reduce using rule 51
	"String"       reduce using rule 51
	"Bool"         reduce using rule 51
	var_identifier reduce using rule 51
	class_identifierreduce using rule 51


State 60

	ClassFunction -> "[-]" Function .                   (rule 61)

	"[+]"          reduce using rule 61
	"[-]"          reduce using rule 61
	"::"           reduce using rule 61
	"}"            reduce using rule 61


State 61

	ClassAttribute -> "[-]" Variable .                  (rule 59)

	"[+]"          reduce using rule 59
	"[-]"          reduce using rule 59
	"::"           reduce using rule 59
	"}"            reduce using rule 59


State 62

	ClassFunction -> "[+]" Function .                   (rule 60)

	"[+]"          reduce using rule 60
	"[-]"          reduce using rule 60
	"::"           reduce using rule 60
	"}"            reduce using rule 60


State 63

	ClassAttribute -> "[+]" Variable .                  (rule 58)

	"[+]"          reduce using rule 58
	"[-]"          reduce using rule 58
	"::"           reduce using rule 58
	"}"            reduce using rule 58


State 64

	ClassMembers -> ClassFunction ClassMembers .        (rule 57)

	"::"           reduce using rule 57
	"}"            reduce using rule 57


State 65

	ClassMembers -> ClassAttribute ClassMembers .       (rule 56)

	"::"           reduce using rule 56
	"}"            reduce using rule 56


State 66

	ClassBlock -> "{" ClassMembers ClassConstructor . ClassMembers "}"    (rule 53)

	"[+]"          shift, and enter state 32
	"[-]"          shift, and enter state 33
	"}"            reduce using rule 55

	ClassMembers   goto state 73
	ClassAttribute goto state 30
	ClassFunction  goto state 31

State 67

	ClassConstructor -> "::" . TypeFuncParams var_identifier Params Block    (rule 62)
	ClassConstructor -> "::" . Block                    (rule 63)

	"{"            shift, and enter state 49
	"Int"          shift, and enter state 19
	"Integer"      shift, and enter state 20
	"Double"       shift, and enter state 21
	"Money"        shift, and enter state 22
	"String"       shift, and enter state 23
	"Bool"         shift, and enter state 24
	class_identifiershift, and enter state 72

	TypeFuncParams goto state 69
	Primitive      goto state 70
	Block          goto state 71

State 68

	ClassBlock -> "{" ClassMembers "}" .                (rule 54)

	"main"         reduce using rule 54
	"class"        reduce using rule 54
	"List"         reduce using rule 54
	"Int"          reduce using rule 54
	"Integer"      reduce using rule 54
	"Double"       reduce using rule 54
	"Money"        reduce using rule 54
	"String"       reduce using rule 54
	"Bool"         reduce using rule 54
	var_identifier reduce using rule 54
	class_identifierreduce using rule 54


State 69

	ClassConstructor -> "::" TypeFuncParams . var_identifier Params Block    (rule 62)

	var_identifier shift, and enter state 163


State 70

	TypeFuncParams -> Primitive . ArrayIndexesDeclaration    (rule 15)

	"["            shift, and enter state 36
	var_identifier reduce using rule 25

	ArrayIndexesDeclarationgoto state 162

State 71

	ClassConstructor -> "::" Block .                    (rule 63)

	"[+]"          reduce using rule 63
	"[-]"          reduce using rule 63
	"}"            reduce using rule 63


State 72

	TypeFuncParams -> class_identifier . ArrayIndexesDeclaration    (rule 16)

	"["            shift, and enter state 36
	var_identifier reduce using rule 25

	ArrayIndexesDeclarationgoto state 161

State 73

	ClassBlock -> "{" ClassMembers ClassConstructor ClassMembers . "}"    (rule 53)

	"}"            shift, and enter state 160


State 74

	ArrayIndexesDeclaration -> "[" integer_literal "]" . ArrayIndexesDeclaration    (rule 26)

	"["            shift, and enter state 36
	var_identifier reduce using rule 25

	ArrayIndexesDeclarationgoto state 159

State 75

	ListAssignment -> ArrayAssignment1D .               (rule 49)

	";"            reduce using rule 49


State 76

	Variable -> ListType var_identifier "=" ListAssignment . ";"    (rule 36)

	";"            shift, and enter state 158


State 77

	ArrayAssignment1D -> "[" . LiteralOrVariable Array1DAssignments "]"    (rule 42)
	ArrayAssignment1D -> "[" . "]"                      (rule 43)
	ListAssignment -> "[" . integer_literal ".." integer_literal "]"    (rule 50)

	"]"            shift, and enter state 151
	decimal_literalshift, and enter state 85
	integer_literalshift, and enter state 157
	var_identifier shift, and enter state 87
	string_literal shift, and enter state 89

	LiteralOrVariablegoto state 149

State 78
